# oxiom

./: .gitignore  Cargo.toml  README.md
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs  program.rs
crates/ir/: Cargo.toml
crates/ir/src/: boundary.rs  css.rs  font.rs  html.rs  js.rs  lib.rs
crates/serializer/: Cargo.toml
crates/serializer/src/: css.rs  html.rs  js.rs  lib.rs
examples/: sample.rs
src/: cdp.rs  main.rs  runner.rs
