[workspace]
members = ["crates/ir", "crates/generator", "crates/serializer", "."]
resolver = "2"

[package]
name = "oxiom"
version = "0.1.0"
edition = "2021"

[dependencies]
oxiom-ir = { path = "crates/ir" }
oxiom-generator = { path = "crates/generator" }
oxiom-serializer = { path = "crates/serializer" }
arbitrary = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde_json = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
num_cpus = "1"
futures-util = "0.3"
ctrlc = "3"
